--- a/chapter01.qmd
+++ b/chapter01.qmd
@@ -7,6 +7,8 @@ editor: visual
 
 ## Definition of Automation
 
+What is automation?
+
 ## Process Control
 
 ## Types of different Industrial Processes
