--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ toc-title: "Index 2024-3"
 
 -   Types of different Industrial Processes
 
-# Neumatic and Electroneumatic Automatization
+# Pneumatic and Electro-pneumatic Automatization
 
 -   Elements of a neumatic circuit
 
