--- a/chapter00.qmd
+++ b/chapter00.qmd
@@ -1,5 +1,5 @@
 ---
-title: "About the Lecure"
+title: "About the Lecture"
 author: "Thomas M. Rudolf"
 format: html
 editor: visual
@@ -26,7 +26,8 @@ editor: visual
 
 -   Address concepts related to Industrial Automation systems.
 -   Control methods applied mainly to sequential processes and the theory related to Grafcet will also be studied.
--   Application of emerging technologies to automate industrial processes. The structure and programming logic for Programmable Logic Controllers (PLC) will be studied.-
+-   Application of emerging technologies to automate industrial processes. The structure and programming logic for Programmable Logic Controllers (PLC) will be studied.
+
 ## What is covered in this lecture:
 
 ![](figures/fig00-001.png)
@@ -47,16 +48,22 @@ editor: visual
 ## Course rules
 
 -   Maximum 10 minutes delay.
--   NO re-examinations.
+-   **NO** re-examinations.
 -   Sanction for plagiarism according to the regulations
 -   Food is not allowed in the lab
 
 ## Topics
 
 -   Introduction to automation
+
 -   Pneumatic and Electro-pneumatic Automatization
+
 -   PLC programmable controllers
+
 -   Grafcet
+
 -   State Flow
+
 -   Industrial Robots (optional)
-![](figures/fig00-002.png)
+
+-   ![](figures/fig00-002.png)
