added first part of introduction

--- a/chapter01.qmd
+++ b/chapter01.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction"
+title: "Introduction to Automation and Process Control"
 author: "Thomas M. Rudolf"
 format: html
 editor: visual
@@ -7,10 +7,20 @@ editor: visual
 
 ## Definition of Automation
 
-What is automation?
+Replacement of the human operator by an artificial operator, in the execution of a previously programmed physical or mental task. \## Types of control schemes One has to control the system in order to autmate it.
 
-![figure 1.1 Automation](figures/fig01-001.png)
+There are basically two types of control: Open Loop and Closed Loop
 
-## Process Control
+The open loop has the following structure. It receives a command or reference signal. The controller calulates an input signal for the actuator. The output of the actuatar starts manipulating the system. Since the controler does not receives any feedback on how the systems reacts on the command the results might be different from the desired behaviour. Examples for the application of open loop control are: A tennis player who hits the ball, if you turn on a light in you room or a DC motor without sensors.
 
-## Types of different Industrial Processes
+## ![structure open loop.](figures/fig01-001.png)
+
+To improve the resulting behaviour and be able to correct possible differences between the commad value and the resulting value, one can implement sensors that observe the resulting behaviour of the systems or process. This sensors return the current behaviour to the controller and the controller can correct the input signal to the actuator. The following figure shows the general structure of a close loop control.
+
+![general structure of a close loop control](figures/fig01-002.png)
+
+## Industrial Process
+
+## Types of Industrial Processes
+
+## Industrial Automation
