added exam dates

--- a/chapter00.qmd
+++ b/chapter00.qmd
@@ -11,7 +11,11 @@ editor: visual
 
 -   Theory: Mon / Wed, 12:30-14:00 hrs
 
--   Lab: Fri 11:00-14:00 hrs
+-   Laboratory:
+
+    -   G001 Fri 11:00-14:00 hrs
+
+    -   G002 Fri 16:00-19:00 hrs
 
 ### Lecturers
 
@@ -39,11 +43,19 @@ editor: visual
 
 ## Evaluation
 
-| Type          | percentage |
-|---------------|------------|
-| 2 Parcials    | 25 % each  |
-| Final Project | 30%        |
-| Laboratory    | 20%        |
++-----------------------------------------------------------+------------+
+| Type                                                      | percentage |
++===========================================================+============+
+| 2 Parcials:                                               | 25 % each  |
+|                                                           |            |
+| -   1st partial: 30/09/2024 or 02/10/2024 (1 hr, 20 min)  |            |
+|                                                           |            |
+| -   2nd partial: 04/11/2024 or 06/11/2024 (1 hr, 20 min)  |            |
++-----------------------------------------------------------+------------+
+| Final Project (Exam final: tbd (LMINT))                   | 30%        |
++-----------------------------------------------------------+------------+
+| Laboratory                                                | 20%        |
++-----------------------------------------------------------+------------+
 
 ## Course rules
 
