--- a/chapter02.qmd
+++ b/chapter02.qmd
@@ -7,6 +7,51 @@ editor: visual
 
 ## Elements of a pneumatic circuit
 
+‘Pneumatics’ is derived from the Greek ‘neuma’ (air or breath). Originally, the term pneumatics designated the science of the movement and properties of air. Branch of engineering that deals with the study and application of compressed air, its generation, transmission and control.
+
+The design of devices that used air energy dates back to the 18th century (with the pneumatic rifle). “Modern” devices: pneumatic rock drill, pneumatic brakes. “Modern” pneumatics was born in the 1950s, when techniques and forms of air energy control were introduced in industrial processes.
+
+#### Why compressed air?
+
+-   It is **abundant**. It is available in unlimited quantities.
+
+-   It is **transportable**. It is easily transported through pipes.
+
+-   It is **storable**. It is easily stored in tanks where pressure is maintained.
+
+-   It is transmitted relatively **quickly**.
+
+-   It is **clean**. In case of stagnation, it does not produce dirt.
+
+#### Comparison with other technologies
+
+|     | Col2 | Col3 | Col4 |
+|-----|------|------|------|
+|     |      |      |      |
+|     |      |      |      |
+|     |      |      |      |
+|     |      |      |      |
+|     |      |      |      |
+|     |      |      |      |
+
+: Comparison with other technologies
+
+### Basic physical characteristics of gases
+
+### Pneumatic Instalations
+
+### Pneumatic actuators.
+
+### Pneumatic valves. 
+
+### Pneumatic circuits with Simscape /Fluids. 
+
+### Pneumatic sequences. 
+
+1.  Cascade method
+
+2.  Step by step method.
+
 ## Elements of a electic circuit, electrical acutators and control elements
 
 ## Automatization of pneumatic and electro-pneumatic sequences
