--- a/chapter02.qmd
+++ b/chapter02.qmd
@@ -25,13 +25,19 @@ The design of devices that used air energy dates back to the 18th century (with 
 
 #### Comparison with other technologies
 
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+-------------------------------------------------------------------------+
 |                          | Electricity                                                                    | Hydraulic                                                                      | Pneumatic                                                               |
-|--------------------------|--------------------------------------------------------------------------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|
++==========================+================================================================================+================================================================================+=========================================================================+
 | Leaks                    |                                                                                | Pollution                                                                      | Apart from energy loss, no disadvantages.                               |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+-------------------------------------------------------------------------+
 | Environmental influences | Explosion hazard in certain environments; relatively sensitive to temperature. | Sensitive to temperature fluctuations; Fire hazard in case of leaks.           | Does not cause explosions; Insensitive to temperatures.                 |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+-------------------------------------------------------------------------+
 | Energy storage           | Difficult and only in small quantities using batteries                         | Within certain limits, using gases                                             | Easy                                                                    |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+-------------------------------------------------------------------------+
 | Energy transport         | Unlimited, but with energy loss                                                | Up to 100 m with flow velocity of v = 2-6 m/s, signal velocity up to 1000 m/s. | Up to 1000 m with flow velocityv = 20-40 m/s,signal velocity 20-40 m/s. |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+-------------------------------------------------------------------------+
 | Working speed            |                                                                                | v = 0.5 m/s                                                                    | v = 1.5 m/s                                                             |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+-------------------------------------------------------------------------+
 
 : Comparison with other technologies
 
@@ -39,9 +45,31 @@ The design of devices that used air energy dates back to the 18th century (with 
 
 Air density is significantly smaller than that of oil (used in hydraulics). Therefore, the inertia effect is smaller. Air can be discharged into the atmosphere after a task. Pneumatic systems are more economical. Pneumatic systems are less toxic and cleaner. Pneumatic systems are lighter, easier to transport.
 
++-----------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Advantages                                                                                          | Disadvantage                                                                                                                                                     |
++=====================================================================================================+==================================================================================================================================================================+
+| -   Air is available in unlimited quantities                                                        | -   It is relatively expensive to transport. The high costs are offset by the cheapness of the elements and the simple and more compact nature of its equipment. |
+|                                                                                                     |                                                                                                                                                                  |
+| -   Air (compressed) can be easily transported in pipes                                             | -   Compressed air requires conditioning to remove dust and moisture.                                                                                            |
+|                                                                                                     |                                                                                                                                                                  |
+| -   It does not require any treatment for its elimination. It is simply thrown into the atmosphere. | -   It is difficult to achieve uniform piston speeds with compressed air.                                                                                        |
+|                                                                                                     |                                                                                                                                                                  |
+| -   Compressed air is insensitive to fluctuations in temperature                                    | -   Noise levels in the operation of pneumatic systems are high due to air leakage.                                                                              |
+|                                                                                                     |                                                                                                                                                                  |
+| -   Compressed air is clean, therefore used in the food and pharmaceutical industries               | -   Lubricated air (with oil) can escape into the atmosphere and cause pollution.                                                                                |
+|                                                                                                     |                                                                                                                                                                  |
+| -   Compressed air allows operation at high speeds                                                  | -   Due to its low conductivity, it cannot dissipate heat as easily as oil would.                                                                                |
+|                                                                                                     |                                                                                                                                                                  |
+| -   The tools and operating elements are safe, when they are overloaded they simply stop working.   |                                                                                                                                                                  |
++-----------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+
 ### Basic physical characteristics of gases
 
-### Pneumatic Instalations
+*Composition:* Types of gases that make up the air under consideration. Example: dry air at sea level is composed mainly of Nitrogen (78%) and Oxygen (20.99%). *Shape and volume:* They have no defined shape or volume. They acquire the shape and volume of the tank that contains them. *Cost (Flow):* It is the quantity of fluid that circulates through a section of the duct per unit of time.
+
+Consider the behavior of air with water under defined circumstances: temperature 20°C and a relative humidity of 50%. This means that it contains 8.7g of water which is the half of the maximum 17.4g.
+
+### Pneumatic Installations
 
 ### Pneumatic actuators.
 
